--- a/vid.css
+++ b/vid.css
@@ -2,8 +2,9 @@ html {
   margin: 0;
 }
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(197, 197, 197);
 }
 
 body h1 {
@@ -14,6 +15,7 @@ body h1 {
   text-shadow: 2px 2px 2px black;
   border: solid 3px green;
   font-family: Outfit, sans-serif;
+  background-color: rgb(41, 252, 22);
 }
 
 @media screen and (max-width: 991px) {
@@ -29,10 +31,11 @@ body h1 {
   background-image: url(media/transparentlogo.png);
   background-repeat: repeat;
   background-size: 250px 200px;
+  background-position: center;
 }
 
 .videos h2 {
-  color: rgb(255, 255, 255);
+  color: rgb(28, 255, 7);
   text-align: center;
   font-family: Outfit, sans-serif;
 }
@@ -44,7 +47,7 @@ body h1 {
 .game {
   width: 100px;
   height: 50px;
-  background-color: green;
+  background-color: rgb(0, 100, 0);
   border: solid 2px gray;
   padding-right: 20px;
   padding-left: 20px;
@@ -55,18 +58,17 @@ body h1 {
 .gamevidwrapper {
   margin-top: 20px;
   display: flex;
-  flex-direction: row;
   overflow-x: scroll;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 50px;
+  flex-direction: column;
 }
 
 .musicvidwrapper {
   margin-top: 20px;
   display: flex;
-  flex-direction: row;
   overflow-x: scroll;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 50px;
 }
 .othervidwrapper {
@@ -74,7 +76,7 @@ body h1 {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 50px;
 }
 
@@ -84,6 +86,8 @@ body h1 {
   margin-top: 20px;
   border-radius: 2px;
   border: 3px solid #0c4e7a;
+  margin-right: 20px;
+  width: fit-content;
 }
 
 .music {
