--- a/vid.css
+++ b/vid.css
@@ -4,18 +4,19 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: rgb(197, 197, 197);
+  background-color: rgb(87, 87, 87);
 }
 
 body h1 {
   text-align: center;
-  color: rgb(0, 131, 17);
+  color: rgb(0, 235, 31);
   font-size: 65px;
   font-weight: 800;
   text-shadow: 2px 2px 2px black;
-  border: solid 3px green;
+  border: solid 3px rgb(0, 51, 0);
   font-family: Outfit, sans-serif;
-  background-color: rgb(41, 252, 22);
+  background-color: rgb(8, 100, 0);
+  box-shadow: 2px 4px 4px black;
 }
 
 @media screen and (max-width: 991px) {
@@ -48,11 +49,12 @@ body h1 {
   width: 100px;
   height: 50px;
   background-color: rgb(0, 100, 0);
-  border: solid 2px gray;
+  border: solid 2px rgb(7, 41, 0);
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 17px;
   padding-top: -12px;
+  box-shadow: 1px 3px 3px black;
 }
 
 .gamevidwrapper {
@@ -67,7 +69,7 @@ body h1 {
 .musicvidwrapper {
   margin-top: 20px;
   display: flex;
-  overflow-x: scroll;
+  justify-content: center;
   width: 90vw;
   margin-bottom: 50px;
 }
@@ -75,9 +77,9 @@ body h1 {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
-  overflow-x: scroll;
   width: 90vw;
   margin-bottom: 50px;
+  justify-content: center;
 }
 
 .video_bucket {
@@ -94,11 +96,12 @@ body h1 {
   width: 100px;
   height: 50px;
   background-color: green;
-  border: solid 2px gray;
+  border: solid 2px rgb(0, 68, 6);
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 17px;
   padding-top: -12px;
+  box-shadow: 1px 3px 3px black;
 }
 
 .row {
@@ -111,11 +114,12 @@ body h1 {
   width: 100px;
   height: 50px;
   background-color: green;
-  border: solid 2px gray;
+  border: solid 2px rgb(0, 68, 6);
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 17px;
   padding-top: -12px;
+  box-shadow: 1px 3px 3px black;
 }
 
 body h3 {
