--- a/vid.css
+++ b/vid.css
@@ -4,7 +4,8 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: rgb(87, 87, 87);
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(66,66,66,1) 50%, rgba(126,126,126,1) 100%);
 }
 
 body h1 {
@@ -15,7 +16,8 @@ body h1 {
   text-shadow: 2px 2px 2px black;
   border: solid 3px rgb(0, 51, 0);
   font-family: Outfit, sans-serif;
-  background-color: rgb(8, 100, 0);
+  background: rgb(1,74,0);
+  background: radial-gradient(circle, rgba(1,74,0,1) 0%, rgba(45,157,41,1) 100%);
   box-shadow: 2px 4px 4px black;
 }
 
@@ -72,6 +74,7 @@ body h1 {
   justify-content: center;
   width: 90vw;
   margin-bottom: 50px;
+  overflow-x: scroll;
 }
 .othervidwrapper {
   margin-top: 20px;
@@ -95,13 +98,14 @@ body h1 {
 .music {
   width: 100px;
   height: 50px;
-  background-color: green;
-  border: solid 2px rgb(0, 68, 6);
+  background-color: rgb(0, 100, 0);
+  border: solid 2px rgb(7, 41, 0);
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 17px;
   padding-top: -12px;
   box-shadow: 1px 3px 3px black;
+  
 }
 
 .row {
@@ -113,8 +117,8 @@ body h1 {
 .other {
   width: 100px;
   height: 50px;
-  background-color: green;
-  border: solid 2px rgb(0, 68, 6);
+  background-color: rgb(0, 100, 0);
+  border: solid 2px rgb(7, 41, 0);
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 17px;
@@ -127,4 +131,20 @@ body h3 {
   bottom: 0;
   right: 0;
   margin-right: 30px;
+}
+
+h3 a {
+  text-decoration: none!important;
+  color: rgb(230, 230, 230);
+  border: 1px solid white;
+  background-color: rgb(0, 48, 2);
+  padding: 3px;
+  font-family: Outfit, sans-serif;
+}
+
+h3 a:hover {
+  color: rgb(47, 255, 64);
+  background-color: black;
+  border: 3px solid rgb(255, 255, 255);
+  transition-duration: 1s;
 }
