--- a/vid.css
+++ b/vid.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgb(0,0,0);
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(66,66,66,1) 50%, rgba(126,126,126,1) 100%);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(70, 70, 70) 50%, rgb(37, 37, 37) 100%);
 }
 
 body h1 {
@@ -71,7 +71,6 @@ body h1 {
 .musicvidwrapper {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
   width: 90vw;
   margin-bottom: 50px;
   overflow-x: scroll;
@@ -105,7 +104,6 @@ body h1 {
   padding-bottom: 17px;
   padding-top: -12px;
   box-shadow: 1px 3px 3px black;
-  
 }
 
 .row {
