--- a/WildWing/style.css
+++ b/WildWing/style.css
@@ -26,6 +26,7 @@ body {
   }
   .hednnav {
     display: flex;
+    height: 100px;
     box-shadow: 5px 3px 6px rgb(43, 7, 102);
   }
   .logo {
@@ -33,9 +34,39 @@ body {
     width: auto;
     background-color: white;
     box-shadow: 5px 3px 6px rgb(15, 0, 29);
+  }
+  /* nav{
+    width: 100%;
+  } */
+  .tabContainer {
+    width: 100%;
+    
     
   }
-  nav {
+  .buttonContatiner {
+   height: 100%; 
+   width: 100%;
+  
+   
+   
+  }
+  .tabContainer .buttonContainer button {
+    width: 20%;
+    height: 100%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 25px;
+    font-family: sans-serif;
+    background-color: #000000;
+    color: antiquewhite;
+    
+    
+    
+
+  }
+  /* nav {
     background-color: rgb(3, 1, 5);
     height: 100px;
     width: 100%;
@@ -90,7 +121,7 @@ body {
     width: 1px;
     height: 20px;
   }
-  
+   */
   main {
     padding-top: 120px;
     height: auto;
